2007-07-27  Lars Knoll  <lars@trolltech.com>

        Reviewed by Zack and Lars.

        Correctly convert a null QString into a null WebCore::String. Add a String(const QStringRef&) constructor so that we can avoid converting QStringRef via QString to WebCore::String.

        * dom/XMLTokenizer.cpp:
        (WebCore::):
        * platform/PlatformString.h:
        * platform/qt/StringQt.cpp:
        (WebCore::String::String):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Parse version and encoding of the xml document.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::write):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Correctly or semi-correctly parse the public and system id.

        Patch from Lars.

        * dom/XMLTokenizer.cpp:
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Fix uri parsing for attributes.

        * dom/XMLTokenizer.cpp:
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Fixing qualified name parsing - from Lars.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::insertErrorMessageBlock):
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Parse dtd's

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::resumeParsing):
        (WebCore::):
        * dom/XMLTokenizer.h:

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Implement error handling.

        Add our copyrights

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::handleError):
        (WebCore::XMLTokenizer::end):
        (WebCore::):
        * dom/XMLTokenizer.h:

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Making the stylesheets work (plus everything else basically)

        * dom/XMLTokenizer.cpp: